# NoxicCore

./: .gitignore  .travis.yml  README.md  THANKS  arcemu-tag  git_version.sh
cmake/: CMakeLists.txt
cmake/crashreport/: CMakeLists.txt
cmake/detour/: CMakeLists.txt
cmake/g3dlite/: CMakeLists.txt
cmake/logon/: CMakeLists.txt
cmake/pcre/: CMakeLists.txt
cmake/recast/: CMakeLists.txt
cmake/scripts/: CMakeLists.txt
cmake/scripts/battlegrounds/: CMakeLists.txt
cmake/scripts/eventscripts/: CMakeLists.txt
cmake/scripts/extrascripts/: CMakeLists.txt
cmake/scripts/gossipscripts/: CMakeLists.txt
cmake/scripts/instancescripts/: CMakeLists.txt
cmake/scripts/luabridge/: CMakeLists.txt
cmake/scripts/luaengine/: CMakeLists.txt
cmake/scripts/lualib/: CMakeLists.txt
cmake/scripts/miscscripts/: CMakeLists.txt
cmake/scripts/questscripts/: CMakeLists.txt
cmake/scripts/serverstatusplugin/: CMakeLists.txt
cmake/scripts/spellhandlers/: CMakeLists.txt
cmake/shared/: CMakeLists.txt
cmake/tools/: CMakeLists.txt
cmake/tools/bzip2/: CMakeLists.txt
cmake/tools/creature_data/: CMakeLists.txt
cmake/tools/dbcfile/: CMakeLists.txt
cmake/tools/libmpq/: CMakeLists.txt
cmake/tools/libmpq_new/: CMakeLists.txt
cmake/tools/loadlib/: CMakeLists.txt
cmake/tools/map_tools/: CMakeLists.txt
cmake/tools/vmap_tools/: CMakeLists.txt
cmake/tools/vmap_tools/vmap_assembler/: CMakeLists.txt
cmake/tools/vmap_tools/vmap_extractor/: CMakeLists.txt
cmake/vmaplib/: CMakeLists.txt
cmake/world/: CMakeLists.txt
cmake/zlib/: CMakeLists.txt
cmake_modules/: CompilerVersion.cmake  DetectSystem.cmake  EnsureVersion.cmake  FindGit.cmake  FindMySQL.cmake  FindPCRE.cmake  PCHSupport.cmake  showoptions.cmake
configs/: logon.conf  optional.conf  realms.conf
dep/include/libmpq_new/: mpq_libmpq04.h
dep/include/vmaplib/: VMapManager2.h
dep/src/g3dlite/: Any.cpp
extras/Spell_to_sql/src/: defines.h
sql/world_updates/: 2014-07-18_playercreateinfo.sql  2014-08-05_00_worldstring.sql  2014-08-05_01_worldstring.sql  2014-08-10_00_npc_monstersay_localized.sql  2014-08-14_00_worldstring.sql
src/arcemu-crashreport/: Main.c
src/arcemu-logonserver/: resources.rc
src/arcemu-shared/: Common.h  Storage.h
src/arcemu-shared/Threading/: AtomicBoolean.h  AtomicCounter.h  AtomicFloat.h  AtomicULong.h
src/arcemu-world/: AIInterface.cpp  AchievementMgr.cpp  AddonMgr.cpp  AddonMgr.h  AreaTrigger.cpp  Arenas.cpp  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  Battleground.cpp  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  CombatHandler.cpp  ConsoleCommands.cpp  Container.cpp  Corpse.cpp  GameObject.cpp  Gossip.cpp  Guild.cpp  GuildHandler.cpp  HackFixes.cpp  HonorHandler.cpp  Item.cpp  ItemHandler.cpp  ItemInterface.cpp  ItemInterface.h  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  LfgMgr.h  LocalizationMgr.cpp  LocalizationMgr.h  Main.cpp  (+36 more)
src/arcemu-world/Commands/: cmd_account.cpp  cmd_achievement.cpp  cmd_admin.cpp  cmd_arena.cpp  cmd_ban.cpp  cmd_battleground.cpp  cmd_character.cpp  cmd_cheat.cpp  cmd_debug.cpp  cmd_gamemaster.cpp  cmd_gobject.cpp  cmd_group.cpp  cmd_guild.cpp  cmd_honor.cpp  cmd_instance.cpp  cmd_item.cpp  cmd_learn.cpp  cmd_lookup.cpp  cmd_misc.cpp  cmd_modify.cpp  cmd_npc.cpp  cmd_pet.cpp  cmd_quest.cpp  cmd_recall.cpp  cmd_server.cpp  cmd_ticket.cpp  cmd_titles.cpp  cmd_vehicle.cpp  cmd_waypoint.cpp
src/arcemu-world/DBC/: DBCStores.cpp  DBCStores.h
src/scripts/lua/0Misc/: 0Defined Variables.lua
src/scripts/lua/0Misc/0LCF_Includes/: 0LCF.lua
src/scripts/src/Battlegrounds/: AlteracValley.cpp  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  CircleOfBlood.cpp  CircleOfBlood.h  DalaranSewers.cpp  DalaranSewers.h  EyeOfTheStorm.cpp  RingOfTrials.cpp  RingOfValor.cpp  RuinsOfLordaeron.cpp  Setup.cpp  WarsongGulch.cpp  WarsongGulch.h
src/scripts/src/GossipScripts/: Gossip_Guard.cpp  Gossip_Innkeepers.cpp
src/scripts/src/InstanceScripts/: Raid_BlackTemple.cpp  Raid_IceCrownCitadel.cpp  Raid_IceCrownCitadel.h
src/scripts/src/LuaEngine/: GameobjectFunctions.h  LUAEngine.cpp  LUAEngine.h  SpellFunctions.h  UnitFunctions.h
src/scripts/src/MiscScripts/: Creatures.cpp
src/scripts/src/QuestScripts/: Quest_ArathiHighlands.cpp  Quest_BlastedLands.cpp  Quest_BurningSteppes.cpp  Quest_DeathKnight.cpp  Quest_Feralas.cpp  Quest_Hellfire_Peninsula.cpp  Quest_Howling_Fjord.cpp  Quest_Icecrown.cpp  Quest_Mulgore.cpp  Quest_Netherstorm.cpp  Quest_Wetlands.cpp  Quest_Winterspring.cpp  Quest_Zangarmarsh.cpp  Setup.cpp  Setup.h
src/scripts/src/SpellHandlers/: ItemSpells_1.cpp  QIspells.cpp  RogueSpells.cpp
todo/spells/: spelleffects.txt
